# Microfinance_credit-risk

./: .gitignore  ABOUT.md  Data generator.py  Dockerfile  Grader.py  Microfinance enviroment.py  Models.py  Openenv.yaml  README.md  Readme.md  Test_env.py  __init__.py  client.py  implemntation_planV2.md  inference.py  microfinance_environment.py  models.py  openenv.yaml  pyproject.toml  requirement.md  requirements.txt  tempCodeRunnerFile.py  test_adversarial.py  test_anticlassification.py  test_env.py  test_grader_fixes.py
server/: .dockerignore  Dockerfile  __init__.py  app.py  counterfactual.py  data_generator.py  episode_logger.py  grader.py  microfinance_env_environment.py  reward_engine.py
server/static/: index.html
